k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: splittrack-ingress
  labels:
    app.kubernetes.io/name: splittrack
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - splittrack.smolelab.com
      secretName: splittrack-tls-cert
  rules:
    - host: splittrack.smolelab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: splittrack-service
                port:
                  number: 80
